--- a/Web.config
+++ b/Web.config
@@ -8,6 +8,7 @@
 <configuration>
   <appSettings>
     <add key="Admin" value="0639,0340"/>
+    <add key="TDSFinYear" value="2018-19"/>
     <add key="BaaNLive" value="True"/>
     <add key="JoomlaLive" value="True"/>
     <add key="ChartImageHandler" value="storage=file;timeout=360;Dir=c:\inetpub\wwwroot\App_Temp\;"/>
@@ -35,6 +36,7 @@
           <add tagPrefix="LGM" tagName="BSLoading" src="~/Sys_Controls/bsLoading.ascx"/>
           <add tagPrefix="LGM" tagName="LGMessage" src="~/Sys_Controls/lgMessage.ascx"/>
           <add tagPrefix="LGM" tagName="LGAlert" src="~/Sys_Controls/lgAlert.ascx"/>
+          <add tagPrefix="LGM" tagName="ToolBar0" src="~/Sys_Controls/lgToolbar.ascx"/>
           <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting" assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
         </controls>
       </pages>
