--- a/Web.config
+++ b/Web.config
@@ -12,6 +12,8 @@
     <add key="BaaNLive" value="True"/>
     <add key="JoomlaLive" value="True"/>
     <add key="ChartImageHandler" value="storage=file;timeout=360;Dir=c:\inetpub\wwwroot\App_Temp\;"/>
+    <add key="IsLocalISGECVault" value="True" />
+    <add key="ISGECVaultIP" value="192.9.200.146" />
   </appSettings>
   <system.web>
       <compilation debug="true" strict="false" explicit="true" targetFramework="4.0" >
