EJI Library in TDS attachment

--- a/Web.config
+++ b/Web.config
@@ -8,12 +8,13 @@
 <configuration>
   <appSettings>
     <add key="Admin" value="0639,0340"/>
-    <add key="TDSFinYear" value="2019-2020"/>
+    <add key="TDSFinYear" value="2020-2021"/>
     <add key="BaaNLive" value="True"/>
     <add key="JoomlaLive" value="True"/>
     <add key="ChartImageHandler" value="storage=file;timeout=360;Dir=c:\inetpub\wwwroot\App_Temp\;"/>
     <add key="IsLocalISGECVault" value="True" />
     <add key="ISGECVaultIP" value="192.9.200.146" />
+    <add key="ERPCompany" value="200"/>
   </appSettings>
   <system.web>
       <compilation debug="true" strict="false" explicit="true" targetFramework="4.0" >
