USE Domain Name instead of IP Address

--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,7 @@
     <add key="JoomlaLive" value="True"/>
     <add key="ChartImageHandler" value="storage=file;timeout=360;Dir=c:\inetpub\wwwroot\App_Temp\;"/>
     <add key="IsLocalISGECVault" value="True" />
-    <add key="ISGECVaultIP" value="192.9.200.146" />
+    <add key="ISGECVaultIP" value="perk01" />
     <add key="ERPCompany" value="200"/>
   </appSettings>
   <system.web>
